--- a/Docker/bcftools_tabix/Makefile
+++ b/Docker/bcftools_tabix/Makefile
@@ -1,8 +1,15 @@
 version ?= 1.0.0
 platform ?= linux/amd64
+use_aws ?= true
 
+ifeq (${use_aws}, true)
+aws_id ?= $(shell aws sts get-caller-identity --query "Account" --output text)
 make:
-	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 178175818611.dkr.ecr.us-east-1.amazonaws.com
+	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${aws_id}.dkr.ecr.us-east-1.amazonaws.com
 	docker build --platform ${platform} -t bcftools:${version} .
-	docker tag bcftools:${version} 178175818611.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:${version}
-	docker push 178175818611.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:${version}
+	docker tag bcftools:${version} ${aws_id}.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:${version}
+	docker push ${aws_id}.dkr.ecr.us-east-1.amazonaws.com/bcftools_tabix-ufl-germline:${version}
+else
+make:
+	docker build --platform ${platform} -t bcftools:${version} .
+endif
